--- a/index.html
+++ b/index.html
@@ -4,43 +4,57 @@
     <meta charset="UTF-8">
     <title>Nurture</title>
     <meta name="viewport" content="initial-scale=1.0, width=device-width"> 
+
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet"> 
-  
+
+    <script type="module" src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons/ionicons.esm.js"></script>
+	<script nomodule="" src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons/ionicons.js"></script>
+
+	<link rel="stylesheet" href="public/stylesheets/style.css">
 </head>
 <body>
-
+    <a href="#" id="bmIcon">
+		<ion-icon name="menu"></ion-icon>
+	</a>
     <main id="container">
-        <section id="contianer1">
+        <section id="navigation">
             <h1 class="hidden">Intro section</h1>
-            <div>
-                    <nav id="menu">
-                        <h2 class="hidden">Menu</h2>
-                        <div>
-                            <ul>
-                                <li><a href="#">Intro</a></li>
-                                <li><a href="#">Sign in</a></li>
-                                <li><a href="#">Buy now</a></li>
-                            </ul>
-                        </div>
-                    </nav>
-            </div>
-            <div>
-                Intro section
-            </div>
+            <nav id="burgerMenu">
+                <h2 class="hidden">Burger Menu</h2>
+                    <ul>
+                        <li><ion-icon name="leaf"></ion-icon>
+                            <a href="#">My Plants</a></li>
+                        
+                        <li><ion-icon name="settings"></ion-icon>
+                            <a href="#">Settings</a></li>
+
+                        <li><ion-icon name="help-circle-outline"></ion-icon>
+                            <a href="#">Help</a></li>
+                    </ul>
+            </nav>
+            <nav id="menu">
+                <h2 class="hidden">Menu</h2>
+                <ul>
+                    <li><ion-icon name="leaf"></ion-icon>
+                        <a href="#">My Plants</a></li>
+                    <li><ion-icon name="settings"></ion-icon>
+                        <a href="#">Settings</a></li>
+                    <li><ion-icon name="help-circle-outline"></ion-icon>
+                        <a href="#">Help</a></li>
+                </ul>
+            </nav>
         </section>
 
         <section id="contianer2">
-            <h1 class="hidden">Sign in section</h1>
-            <div>
-                Sign in section
+            <h1 class="hidden">Dashboard</h1>
+            <div id="dashboard">
+                <img src="public/images/plantpro.png" alt="plant profile">
+                <h3>Name: <br>Greeny
+                <br>Last update: <br>Dec 08, 2019</h3>
             </div>
-        </section>
-
-        <section id="contianer3">
-            <h1 class="hidden">Section</h1>
-            <div>
-                Section
+            <div id="data">
+               <canvas id="doughnutChart"></canvas>
             </div>
         </section>
 
@@ -49,6 +63,7 @@
         </footer>
    
     </main>
-    
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.bundle.js"></script>
+    <script src="public/javascripts/dataViz.js"></script>
 </body>
 </html>
