--- a/app/index.html
+++ b/app/index.html
@@ -72,7 +72,7 @@
     </main>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.bundle.js"></script>
     <script src="https://unpkg.com/vue@2.3.4"></script>
-    <script src="app/js/main.js"></script>
-    <script src="app/js/dataViz.js"></script>
+    <script src="js/main.js"></script>
+    <script src="js/dataViz.js"></script>
 </body>
 </html>
