--- a/app/index.html
+++ b/app/index.html
@@ -11,7 +11,7 @@
     <script type="module" src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons/ionicons.esm.js"></script>
 	<script nomodule="" src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons/ionicons.js"></script>
 
-	<link rel="stylesheet" href="public/stylesheets/style.css">
+	<link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <a href="#" id="bmIcon">
@@ -33,6 +33,7 @@
                             <a href="#">Help</a></li>
                     </ul>
             </nav>
+
             <nav id="menu">
                 <h2 class="hidden">Menu</h2>
                 <ul>
