Added line chart with placeholder data

--- a/app/index.html
+++ b/app/index.html
@@ -56,7 +56,9 @@
             <div id="data">
                <canvas id="doughnutChart"></canvas>
             </div>
-
+            <div id="historyData">
+                <canvas id="lineChart"></canvas>
+            </div>
             <div id="app">
              <p class="temperature" v-on:click="toggleTemperature">{{temperature | temperatureUnit}} {{unit}}</p>
             </div>
