--- a/app/index.html
+++ b/app/index.html
@@ -54,17 +54,20 @@
                 <h3>Name: <br>Greeny
                 <br>Last update: <br>Dec 08, 2019</h3>
             </div>
-            <div id="data">
-               <canvas id="doughnutChart"></canvas>
+            <div id="doughnutChartsCon">
+                <canvas id="humidityDoughnut"></canvas>
+                <div id="tempCon">
+                    <h1>Johnny Five data</h1>
+                    <p id="johnnyFiveData"></p>
+                </div>
+                <canvas id="lightDoughnut"></canvas>
             </div>
             <div id="historyData">
                 <canvas id="lineChart"></canvas>
             </div>
-            <div id="app">
-             <p class="temperature" v-on:click="toggleTemperature">{{temperature | temperatureUnit}} {{unit}}</p>
-            </div>
-
-            <p id="johnnyFiveData"></p>
+            <!-- <div id="app"> -->
+             <!-- <p class="temperature" v-on:click="toggleTemperature">{{temperature | temperatureUnit}} {{unit}}</p> -->
+            <!-- </div> -->      
 
         </section>
 
@@ -74,7 +77,12 @@
    
     </main>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.bundle.js"></script>
-    <script src="https://unpkg.com/vue@2.3.4"></script>
+    <!-- <script src="https://unpkg.com/vue@2.3.4"></script>    -->
+    
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script> -->
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/plugins/TextPlugin.min.js"></script> -->
+   
+    <script src="js/gsap.min.js"></script>
     <script src="js/main.js"></script>
     <script src="js/dataViz.js"></script>
 </body>
