--- a/app/index.html
+++ b/app/index.html
@@ -11,22 +11,20 @@
 
     <script type="module" src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule="" src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons/ionicons.js"></script>
-	<link rel="stylesheet" href="./css/style.css">
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenMax.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/plugins/ScrollToPlugin.min.js"></script>
+
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-<<<<<<< HEAD
     <div id="topmenu">
         <a href="#" id="bmIcon">
         <ion-icon name="menu" size="large"></ion-icon>
         </a>
         <img src="images/logo/logoicon.png" alt="NURTURE" id="logo">
     </div>
-=======
-<img src="images/logo/logoicon.png" alt="NURTURE" id="logo">
-    <a href="#" id="bmIcon">
-                <ion-icon name="menu"></ion-icon>
-        </a>
->>>>>>> e1ba6248f5573e2ff092339ca6ac9d55a57ab7d6
     <main id="container">
         <section id="navigation">
             <h1 class="hidden">Intro section</h1>
