Added link from index to dashboard, removed some redundant js in mainjs

--- a/app/index.html
+++ b/app/index.html
@@ -25,9 +25,9 @@
         <form name="form" id="form">
             <input class="input" type="text" name="name" placeholder="Email Address">
             <input class="input" type="email" name="email" placeholder="Password">
-              <button class="button" id="loginButton">Log in</button>
+            <button class="button" id="loginButton" type="submit" formaction="dashboard.html">Log in</button>
         </form>
-        <h3>New user? <a href="#">Sign up</a></h3>
+        <h3><a href="#">New user? Sign up</a></h3>
     </section>
 
     <footer>
