Added scroll arrow to dashboard.html

--- a/app/dashboard.html
+++ b/app/dashboard.html
@@ -71,6 +71,8 @@
                 <h1>Hey Ria!</h1>
                 <h2>Your cactus Greeny is looking good!</h2>
             </div>
+
+            <!-- Doughnut charts -->
             <div id="doughnutChartsCon">
                 <div id="hydrometerCon" class="sensorCon">
                     <canvas id="humidityDoughnut"></canvas>
@@ -87,7 +89,13 @@
                 </div>
             </div>
                 <canvas id="lightDoughnut"></canvas>
-            </div>        
+            </div>    
+
+            <!-- scroll down for history -->
+            <div id="scrollDownCon">
+                <ion-icon name="arrow-dropdown"></ion-icon>
+            </div>
+            <!-- Line charts -->
             <div id="historyData">
                 <canvas id="temperatureLineChart"></canvas>
                 <canvas id="hydrometerLineChart"></canvas>
