--- a/app/dashboard.html
+++ b/app/dashboard.html
@@ -51,16 +51,16 @@
             <nav id="menu">
                 <h2 class="hidden">Menu</h2>
                 <ul>
-                    <li><div class="button"><ion-icon name="home" size="large"></ion-icon></div>
-                        <a href="#"></a></li>
-                    <li><div class="button"><ion-icon name="leaf" size="large"></ion-icon></div>
-                        <a href="#"></a></li>
-                    <li><div class="button"></div><ion-icon name="settings" size="large"></ion-icon></div>
-                        <a href="#"></a></li>
-                    <li><div class="button"></div><ion-icon name="help" size="large"></ion-icon></div>
-                        <a href="#"></a></li>
-                    <li><div class="button"></div><ion-icon name="log-out" size="large"></ion-icon></div>
-                        <a href="#"></a></li>
+                    <li><a href="#"><div class="button"><ion-icon name="home" size="large"></ion-icon></div>
+                        </a></li>
+                    <li><a href="#"><div class="button"><ion-icon name="leaf" size="large"></ion-icon></div>
+                        </a></li>
+                    <li><a href="#"><div class="button"></div><ion-icon name="settings" size="large"></ion-icon></div>
+                        </a></li>
+                    <li><a href="#"><div class="button"></div><ion-icon name="help" size="large"></ion-icon></div>
+                        </a></li>
+                    <li><a href="#"><div class="button"></div><ion-icon name="log-out" size="large"></ion-icon></div>
+                        </a></li>
                 </ul>
             </nav>
         </section>
