--- a/app/dashboard.html
+++ b/app/dashboard.html
@@ -117,6 +117,7 @@
 
      <!-- <script src="https://unpkg.com/vue@2.3.4"></script>    -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.bundle.js"></script>
+    <script src="js/ScrollToPlugin.min.js"></script>
     <script src="js/gsap.min.js"></script>
     <script src="js/main.js"></script>
 </body>
