--- a/app/index.html
+++ b/app/index.html
@@ -1,45 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Nurture</title>
-    <meta name="viewport" content="initial-scale=1.0, width=device-width"> 
+    <head>
+        <meta charset="UTF-8">
+        <title>Nurture</title>
+        <meta name="viewport" content="initial-scale=1.0, width=device-width"> 
 
-    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet"> 
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet"> 
 
-    <script type="module" src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule="" src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons/ionicons.js"></script>
+        <script type="module" src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons/ionicons.esm.js"></script>
+        <script nomodule="" src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons/ionicons.js"></script>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenMax.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/plugins/ScrollToPlugin.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenMax.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/plugins/ScrollToPlugin.min.js"></script>
 
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/index.css">
-</head>
-<body>
-    <section id="main">
-        <img src="images/logo/logo_120.png" alt="Nurture" id="logo">
-        <h2>Welcome back!</h2>
-        
-        <form name="form" id="form">
-            <input class="input" type="text" name="name" placeholder="Email Address">
-            <input class="input" type="email" name="email" placeholder="Password">
-            <button class="button" id="loginButton" type="submit" formaction="dashboard.html">Log in</button>
-        </form>
-        <h3><a href="#">New user? Sign up</a></h3>
-    </section>
+        <link rel="stylesheet" href="css/reset.css">
+        <link rel="stylesheet" href="css/index.css">
+    </head>
+    <body>
+        <h1 class="hidden">Nurture log-in page</h1>
+        <section id="main">
+            <img src="images/logo/logo_120.png" alt="Nurture" id="logo">
+            <h2>Welcome back!</h2>
+            <form name="form" id="form">
+                <input class="input" type="text" name="name" placeholder="Email Address">
+                <input class="input" type="email" name="email" placeholder="Password">
+                <button class="button" id="loginButton" type="submit" formaction="dashboard.html">Log in</button>
+                <h3><a href="#">New user? Sign up</a></h3>
+            </form>
+        </section>
 
-    <footer>
+        <footer>
             <ul id="footerMenu">
                 <li><a href="#">About Us</a></li>
                 <li><a href="#">Terms</a></li>
                 <li><a href="#">Privacy</a></li>
-            </ul></div>
+            </ul>
         </footer>
 
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.bundle.js"></script>
-    <script src="js/gsap.min.js"></script>
-    <script src="js/main.js"></script>
-</body>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.bundle.js"></script>
+        <script src="js/gsap.min.js"></script>
+        <script src="js/main.js"></script>
+    </body>
 </html>
